added finished balances view
